<resources>
    <string name="app_name">জয় বাংলা</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="bongobondhu_child_img_name">bongobondhuchildImg</string>
    <string name="bongobondhu_politic1_img_name">bongobondhupolitic1Img</string>
    <string name="bongobondhu_politic2_img_name">bongobondhupolitic2Img</string>
    <string name="bongobondhu_precident_img_name">bongobondhurecidentImg</string>
    <string name="hasina_child_img_name">asina_child_img</string>
    <string name="hasina_student_img_name">asina_student_img</string>
    <string name="hasina_politiclife_img_name">asina_politic_img</string>
    <string name="hasina_primeminster_img_name">asina_minister_img</string>
    <string name="joy_child_img_name">joy_child_img</string>
    <string name="joy_student_img_name">joy_student_img</string>
    <string name="joy_politic_img_name">joy_politic_img</string>
    <string name="joy_digital_img_name">joy_digital_img</string>
    <string name="awyamelig_itihas_img_name">awyamelig_itihas</string>
    <string name="awyamelig_juddheobodan_img_name">awyamelig_juddheobodan</string>
    <string name="awyamelig_gonotronteobodan_img_name">awyamelig_gonotronteobodan</string>
    <string name="awyamelig_gothontontro_img_name">awyamelig_gothontontro</string>
    <string name="home">হোম</string>
    <string name="bongobondhu">বঙ্গবন্ধু শেখ মুজিবুর রহমান</string>
    <string name="bongobondhu_jiboni">বঙ্গবন্ধুর জীবনী</string>
    <string name="bongobondhu_jiboni_childhood">জন্ম ও শিক্ষা জীবন</string>
    <string name="bongobondhu_jiboni_polytic1">রাজনৈতিক জীবন(প্রথম)</string>
    <string name="bongobondhu_jiboni_polytic2">রাজনৈতিক জীবন(দ্বিতীয়)</string>
    <string name="bongobondhu_jiboni_president">রাষ্ট্রপতি শেখ মুজিব</string>
    <string name="bongobondhu_osamapto">বঙ্গবন্ধুর অসমাপ্ত আত্মজীবনী</string>
    <string name="bongobondhu_jadughor">বঙ্গবন্ধুর জাদুঘরের লোকেশন</string>
    <string name="bongobondhu_cithi">বঙ্গবন্ধুর হাতে লেখা চিঠি সমূহ</string>
    <string name="bongobondhu_vashon">বঙ্গবন্ধুর ভাষণ সমূহ</string>
    <string name="shekh_hasina">শেখ হাসিনা</string>
    <string name="shekh_hasina_jiboni">প্রধানমন্ত্রী শেখ হাসিনার জীবনী</string>
    <string name="shekh_hasina_vashon">প্রধানমন্ত্রী শেখ হাসিনার ভাষণ সমূহ</string>
    <string name="shekh_hasina_antojatik">আন্তর্জাতিক অঙ্গনে শেখ হাসিনা</string>
    <string name="joy">সজীব ওয়াজেদ জয়</string>
    <string name="joy_jiboni">সজীব ওয়াজেদ জয় এর জীবনী</string>
    <string name="joy_vashon">সজীব ওয়াজেদ জয় এর ভাষণ সমূহ</string>
    <string name="awyamelig">বাংলাদেশ আওয়ামী লীগ</string>
    <string name="bangladesh_awyamelig">বাংলাদেশ আওয়ামী লীগ</string>
    <string name="awyamelig_history">আওয়ামী লীগের ইতিহাস</string>
    <string name="awyamelig_achivement">আওয়ামী লীগের সাফল্য-স্বীকৃতি</string>
    <string name="chatrolig">বাংলাদেশ ছাত্রলীগ</string>
    <string name="bangladesh_chatrolig">বাংলাদেশ ছাত্রলীগ</string>
    <string name="chatrolig_history">বাংলাদেশ ছাত্রলীগের ইতিহাস</string>
    <string name="chatrolig_photo">ছবি গ্যালারি </string>
    <string name="bongobondhu_childhood">১৯২০ সালের ১৭ই মার্চ গোপালগঞ্জ জেলার পাটগাতি ইউনিয়নের টুঙ্গিপাড়া গ্রামে এক অবস্থাপন্ন পরিবারে রোজ মঙ্গলবার ৩রা চৈত্র ১৩২৭ বঙ্গাব্দ এবং ইংরেজী ১৯২০ খ্রীষ্টাব্দের ১৭ই মার্চ বাদ মাগরেব (রাত ৮টা) যে শিশুর জন্ম হয়, পরবর্তীকালে তিনিই স্বাধীন ও সার্বভৌম বাংলাদেশের স্রষ্টা এবং বাঙালি জাতির পিতা বঙ্গবন্ধু শেখ মুজিবুর রহমান। পিতা শেখ লুৎফর রহমান এবং মাতা মোছাঃ সায়েরা বেগম। শেখ মুজিব পিতা-মাতার তৃতীয় সন্তান। তবে প্রথম পুত্র ৪ বোন এবং ২ ভাই। শেখ মুজিবের ডাক নাম “খোকা”। বাবা-মা দু’জনেই তাদের বড় ছেলেকে এই আদুরে ‘খোকা’ নামে ডাকতেন। বাড়ীতেই তার লেখাপড়ার হাতেখড়ি। গৃহশিক্ষকের নাম পণ্ডিত সাখাওয়াৎ উল্লাহ। ১৯২৭-১৯২৯ সাত বছর বয়সে শেখ মুজিবের স্কুল শিক্ষার সূচনা হয়। গমাডাঙ্গা প্রাথমিক বিদ্যালয়ে পরে তিনি গোপালগঞ্জ পাবলিক স্কুলের তৃতীয় শ্রেণীতে ভর্তি হন ১৯২৯ সালে। ১৯৩১ এ সময় শেখ লুৎফর রহমান সরকারি চাকুরীজীবী। মাদারীপুর দেওয়ানী আদালতে তিনি ছিলেন সেরেস্তাদার। প্রায়ই গ্রামের বাড়ী টুঙ্গিপাড়ায় যাতায়াত করতেন। ১৯৩১ তিনি দুরন্ত স্বভাবের পুত্র শেখ মুজিবুরকে সঙ্গে করে কর্ম ক্ষেত্রে নিয়ে এলেন এবং ভর্তি করে দিলেন মাদারীপুর ইসলামিয়া হাই স্কুলের চতুর্থ শ্রেণীতে কিন্তু বছর দেড়েকের মধ্যে হ্যাংলা ও ছিপছিপে শেখ মুজিব আক্রান্ত হলেন বেরিবেরি রোগে এবং এই রোগ থেকেই তাঁর চোখে দারুণ অসুখ দেখা দিলো। ডাক্তারী ভাষায় রোগের নাম “গ্লোকুমা” বছর কয়েকের জন্য মুজিবের লেখাপড়া একেবারে বন্ধ। ১৯৩৬ বন্ধু-বান্ধব এবং শুভাকাঙ্ক্ষীদের পরামর্শে সুচিকিৎসার জন্য পুত্রকে সঙ্গে করে লুৎফর রহমান কোলকাতায় গেলেন। বিখ্যাত চক্ষুবিশেষজ্ঞ ডাঃ পি আহমদ কোলকাতা মেডিক্যাল কলেজ হাসপাতালে শেখ মুজিবের চোখে অস্ত্রোপচার করলেন। সফল অপারেশনের পর ডাঃ আহমদের পরামর্শেই কিশোর মুজিব চশমা ব্যবহার করতে শুরু করলেন। গোপালগঞ্জে ফিরে এসে তিনি ভর্তি হলেন খ্রীষ্টানদের পরিচালিত মিশন স্কুলের পঞ্চম শ্রেণীতে।</string>
    <string name="joyStudent">নৈনিতালের সেন্ট জোসেফ কলেজ হতে স্নাতক করার পর যুক্তরাষ্ট্রের দ্য ইউনিভার্সিটি অব টেক্সাস এ্যট আর্লিংটন থেকে কম্পিউটার বিজ্ঞানে স্নাতক শেষ করেন। পরবর্তীতে হার্ভার্ড বিশ্ববিদ্যালয় থেকে লোক-প্রশাসন বিষয়ে স্নাতকোত্তর ডিগ্রী অর্জন করেন। বর্তমানে তিনি স্হায়ীভাবে মার্কিন যুক্তরাষ্ট্রের ভার্জিনিয়া বাস করছেন।</string>
    <string name="joyDigital1">২০০৮ সালের ডিসেম্বরে আওয়ামী লীগ যে নির্বাচনি ইশতেহার প্রকাশ করে, তাতে তথ্যপ্রযুক্তি অংশে আরও অনেক কিছুর সঙ্গে ছিল একটি বাক্য, ‘২০২১ সালের মধ্যে ডিজিটাল বাংলাদেশ।’ এই একটি বাক্যই বাংলাদেশকে বদলে দেওয়ার জন্য ছিল যথেষ্ট বলে মনে করেন দেশের আইটি খাত সংশ্লিষ্টরা। তাদের মতে, ওই বাক্যের মধ্যেই নির্ধারিত হয়ে যায় রূপকল্প। যে রূপকল্প বাস্তবায়ন করতে সামনে থেকে নেতৃত্ব দিয়ে যাচ্ছেন প্রধানমন্ত্রীর তথ্যপ্রযুক্তি বিষয়ক উপদেষ্টা সজীব ওয়াজেদ জয়।
সদ্য সমাপ্ত বিপিও সামিট বাংলাদেশ-২০১৬-এর উদ্বোধনী অনুষ্ঠানে সজীব ওয়াজেদ জয় বলেন, বর্তমানে বিজনেস প্রসেস আউটসোর্সিং (বিপিও) খাতে ২৫ হাজার তরুণ কাজ করছে। ২০২১ সালের মধ্যে এ খাতটিতে ২ লাখ মানুষের কর্মসংস্থান হবে। আর ওই সময়ে বিপিও খাত থেকে বাংলাদেশ এক বিলিয়ন ডলার আয় করবে। জয়ের নিজ উদ্যোগে গত বছরের ডিসেম্বরে প্রথমবারের মতো বিপিও সামিট আয়োজন করা হয়। প্রথম সফল আয়োজনের ১০ মাসের মাথায় দেশে হয়ে গেল বিপিও সামিট। এজন দূরদৃষ্টি সম্পন্ন প্রযুক্তি বিশেষজ্ঞ বলেই তিনি বিপিওতে বাংলাদেশের ভবিষ্যৎ দেখেছেন। আয়োজকরা সদস্য সমাপ্ত বিপিও সামিটে জানিয়ে দিলেন, প্রথমবারের অয়োজনের পরে দেশে বিপিও খাতের আয় বেড়েছে। তারা উল্লেখ করেন, গত বছর বিপিও সামিটের আগে এ খাত থেকে বাংলাদেশের আয় ছিল ১৩০ মিলিয়ন ডলার। মাত্র ১০ মাসের মাথায় সেই আয় বেড়ে দাঁড়িয়েছে ১৮০ মিলিয়ন ডলারে। আয়োজকরা এর পুরো কৃতিত্ব দিতে চান জনাব জয়কে।    

বর্তমান সরকারের গত মেয়াদে বাংলাদেশ ডিজিটাইজেশনের পথে অনেক দূর এগিয়ে যায়। দেশের সম্পাদিত অনেক কাজই এখন ম্যানুয়াল পদ্ধতিতে হয় না। সচিবালয় থেকে ইউনিয়ন পরিষদ এমনকী গ্রামের প্রত্যন্ত অঞ্চলের একটি স্কুলেও পৌঁছে গেছে ডিজিটাল বাংলাদেশের ছোঁয়া।

সংশ্লিষ্ট খাত সম্পৃক্তরা বলেন, গত মেয়াদে সরকার ডিজিটাল বাংলাদেশের প্রাথমিক (তাত্ত্বিক কাজ) কাজ সম্পন্ন করে। চলতি মেয়াদে পুরোপুরিভাবে ব্যবহারিক কাজ শুরু করেছে।  তাদের আশা সজীব ওয়াজেদ জয় নেতৃত্বে থাকলে ২০২১ সালের আগেই ডিজিটাল বাংলাদেশ গড়ে তোলা সম্ভব হবে।

সজীব ওয়াজেদ জয় সম্পর্কে বলতে গিয়ে তথ্য ও যোগাযোগ প্রযুক্তি (আইসিটি) বিভাগের প্রতিমন্ত্রী জুনাইদ আহমেদ পলক বলেন, সজীব ওয়াজেদ জয় নিজের হাতে দেশের আইসিটি খাতকে এগিয়ে নিয়ে যাচ্ছেন। তার গতিশীল নেতৃত্ব, গাইডলাইন ও প্রত্যক্ষ তত্ত্বাবধান ছাড়া এতটা এগিয়ে যাওয়া সম্ভব হতো না। তথ্যপ্রযুক্তিতে যখন যা করা দরকার, ঠিক ওই সময়ে তিনি সেই কাজে হাত দিয়েছেন।

পলক বলেন, দেশে একটি নয় প্রায় ১২টি হাইটেক পার্ক হতে যাচ্ছে। হাইটেক পার্কগুলোতে কী থাকবে, কী হবে, কারা আসবে, সেসব নির্দেশনা তিনি দিচ্ছেন। দ্রুত গতিতে হাইটেক পার্কগুলো এগিয়ে চলেছে। তিনি আইটি পলিসি তৈরির উদ্যোগ নিয়েছেন। তার একান্ত উদ্যোগে এবং মতামতের ভিত্তিতে ডিজিটাল নিরাপত্তা আইন প্রণয়নের কাজ চলছে। কাওরান বাজারের জনতা টাওয়ারকে সফটওয়্যার টেকনোলজি পার্ক করা হয়েছে। সেখানে আইটি ইনকিউবেটর করা হচ্ছে নবীন উদ্যোক্তাদের জন্য।

</string>
    <string name="joyDigital2">
    আইসিটি প্রতিমন্ত্রী জানান, এছাড়া দেশে বেশ কয়েকটি তথ্যপ্রযুক্তি-বিষয়ক আন্তর্জাতিক মেলা, প্রদর্শনী (ই-এশিয়াসহ) হয়েছে। তাতে সজীব ওয়াজেদ জয়ের প্রত্যক্ষ ভূমিকা ছিল। ওইসব মেলা ও প্রদর্শনীতে বিশ্বখ্যাত তথ্যপ্রযুক্তিবিদরা অংশ নেন। তিনি ছিলেন বলেই বিষয়গুলো সহজ হয়েছিল। তিনি আরও উল্লেখ করেন, আসলে এভাবে বলে শেষ করা যাবে না।

বিশিষ্ট তথ্যপ্রযুক্তিবিদ ও বাংলাদেশ অ্যাসোসিয়েশন অব সফটওয়্যার অ্যান্ড ইনফরমেশন সার্ভিসেসের (বেসিস) সভাপতি মোস্তাফা জব্বার বলেন, এই বিষয়ে জয় পড়াশোনা করেছেন। শৈশব থেকেই তার এই বিষয়ে আগ্রহ ছিল। তথ্যপ্রযুক্তির নানা বিষয় তিনি আগ্রহ নিয়ে শিখেছেন। ফলে বিষয়টির প্রতি তার বিশেষ আবেগ থাকবে এটাই স্বাভাবিক।

মোস্তাফা জব্বার বলেন, একটি বিষয় উল্লেখ করতে চাই। ১৯৯৬ সালে আওয়ামী লীগ ক্ষমতায় এসে কম্পিউটারের ওপর শুল্ক, কর তুলে নিতে চেয়েছিল। আমরা তখন যেন বিষয়টি চূড়ান্ত হয় সেজন্য কাজ করছিলাম। তখন হয়তো জয় তার মাকে বুঝিয়েছিলেন, ‘ট্যাক্স-ভ্যাট তুলে নিতে হবে।’ ওই সময় সরকার তা তুলে নিয়েছিল। তিনি আরও উল্লেখ করেন, জয়ের বাসাতেই তথ্যপ্রযুক্তি চর্চার একটি সংস্কৃতি ছিল। তার মা প্রধানমন্ত্রী শেখ হাসিনা তথ্যপ্রযুক্তির ব্যাপারে আগ্রহী ছিলেন। ওই সময় তিনি কম্পিউটার জানতেন। ১৯৯৬-এর নির্বাচনের আগে কম্পিউটারে প্রধানমন্ত্রী নিজে টাইপ করে প্রেসরিলিজ লিখতেন।এ রকম একটি বাসা তথ্যপ্রযুক্তির প্রতি কাউকে আগ্রহী করে তুলবে এটাই স্বাভাবিক। জয় ছোটবেলা থেকেই এসব পেয়েছেন এবং পরবর্তী সময়ে চর্চারও সুযোগ পেয়েছেন বলে তিনি এর ভবিষ্যৎও দেখতে পেয়েছেন। আর আমাদের তথ্যপ্রযুক্তি সে পথেই হাঁটছে। এখন তিনি প্রধানমন্ত্রীর তথ্যপ্রযুক্তি উপদেষ্টা হিসেবে কাজ করছেন। আমি মনে করি, ডিজিটাল বাংলাদেশ ঘোষণার পরে একটি পূর্ণাঙ্গ রোডম্যাপ তৈরি করা ছিল বড় চ্যালেঞ্জ। সেক্ষেত্রে তার ভূমিকা আছে।

বেসিস সভাপতি আরও বলেন, আমরা ডিজিটাল বাংলাদেশ নিয়ে মহযজ্ঞের আয়োজন করেছি। আমাদের কাছে ডিজিটাল বাংলাদেশের কোনও ডকুমেন্ট নেই। আমরা আন-ডকুমেন্টেভাবে আছি। আমরা সেটাকে একটা ধারণা ধরে সামনে এগোচ্ছি।  আরও সামনে এগোতে গেলে এর চেয়ে বেশি যাওয়া যাবে না। আমি এ বিষয়ে সজীব ওয়াজেদ জয়ের দৃষ্টি আকর্ষণ করছি।

মোস্তাফা জব্বার আরও বলেন, সরকারের বিভিন্ন মন্ত্রণালয়, বিভাগের মধ্যে তথ্যপ্রযুক্তি বিষয়ে কোনও সমন্বয় নেই। এটা খুব জরুরি। আশা করি তিনি এ বিষটির প্রতি বিশেষ নজর রাখবেন।  তিনি আরও বলেন, সজীব ওয়াজেদ জয় কর্মজীবনেও তথ‌্যপ্রযুক্তিকে বিশেষ গুরুত্বের সঙ্গে নিয়েছেন। ফলে এই খাতের সংকট, চ‌্যালেঞ্জও নিয়ে সহজেই সবার আগে উপলব্ধি করেন। একটি ডিজিটাল বাংলাদেশ রোডম‌্যাপ বা মহাপরিকল্পনা আমরা প্রত‌্যাশা করতেই পারি। তিনি এবার দেশীয় সফটওয়্যার নিয়ে একথা বলেছেন যে আমাদের দেশের কাজ আমাদের প্রতিষ্ঠানই করবে। আমি এজন‌্য তাকে ধন‌্যবাদ জানাই। কারণ আমরা এটাই চাই।

দেশের গ্রাহককে সুরক্ষা দিতে প্রথমবারের মতো বায়োমেট্রিক (আঙুলের ছাপ দিয়ে) পদ্ধতিতে মোবাইলফোনের সিম নিবন্ধন চালুর উদ্যোগও ছিল সজীব ওয়াজেদ জয়ের। তিনি ব্রডব্যান্ডের (উচ্চগতি)৫ মেগা নির্ধারণ করেছেন। এর আগেও তিনি ১ মেগাবাইট করেছিলেন। মেধাবী গরিব শিক্ষার্থীদের হাতে বিনামূল্যে ল্যাপটপ তুলে দেওয়ার কার্যক্রমও তিনিই শুরু করেছেন। এছাড়া সরকারি কর্মকর্তাদের কাজে গতি আনতে তিনি সবাইকে ট্যাব দেওয়ার পরিকল্পনা নিয়েছেন। এরই মধ্যে ট্যাব বিতরণ শুরুও হয়েছে। বঙ্গবন্ধুর নাতি সজীব ওয়াজেদ জয় দেশের তরুণ প্রজন্মকে নিয়ে স্বপ্ন দেখেন। তিনি তরুণদের উদ্দেশে বলেছেন, এ দেশের তথ্যপ্রযুক্তিকে তোমরাই এগিয়ে নিয়ে যাবে। তিনি তরুণদের দক্ষ হয়ে ওঠার জন্য তথ্যপ্রযুক্তির বিভিন্ন প্রশিক্ষণের ব্যবস্থাও করেছেন।         

সজীব ওয়াজেদ জয়কে খুব কাছ থেকে দেখেছেন এবং মিশেছেন বেসিসের সাবেক সভাপতি শামীম আহসান। তিনি বলেন, দেশে তথ্যপ্রযুক্তিতে যা কিছু হয়েছে তাতে সজীব ওয়াজেদ জয়ের অবদান আছে। শুধু বর্তমানেই নয়, অতীতেও তিনি এ খাতে অবদান রেখেছেন।

</string>
</resources>