<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JoyJiboni">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/backId"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/backb"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <ImageView
            android:id="@+id/joyChildhoodImgID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/joy_childhood"
            android:layout_margin="5dp"
            android:transitionName="@string/joy_child_img_name"/>
        <ImageView
            android:id="@+id/joyStudentImgID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/joy_student"
            android:layout_margin="5dp"
            android:transitionName="@string/joy_student_img_name"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <ImageView
            android:id="@+id/joyPoliticImgID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/joy_politic"
            android:layout_margin="5dp"
            android:transitionName="@string/joy_politic_img_name"/>
        <ImageView
            android:id="@+id/joyDigitalImgID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/joy_digotal_bangla"
            android:layout_margin="5dp"
            android:transitionName="@string/joy_digital_img_name"/>


    </LinearLayout>

</LinearLayout>