<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShekhiHasinaJiboni"
    android:orientation="vertical"
    android:weightSum="2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/backId"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/backb"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <ImageView
            android:id="@+id/hasina_child_Img_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/hasina_child"
            android:layout_margin="5dp"
            android:transitionName="@string/hasina_child_img_name"/>
        <ImageView
            android:id="@+id/hasina_studentLife_Img_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/hasina_student"
            android:layout_margin="5dp"
            android:transitionName="@string/hasina_student_img_name"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <ImageView
            android:id="@+id/hasina_politicalLife_Img_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/hasina_politic"
            android:layout_margin="5dp"
            android:transitionName="@string/hasina_politiclife_img_name"/>
        <ImageView
            android:id="@+id/hasina_primeMinister_Img_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/hasina_p_minister"
            android:layout_margin="5dp"
            android:transitionName="@string/hasina_primeminster_img_name"/>


    </LinearLayout>

</LinearLayout>