<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JoyDigital">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/backId"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/backb"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            />
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="170dp"
        android:layout_height="280dp"
        android:background="@drawable/joy_digotal_bangla"
        android:layout_gravity="center"
        android:transitionName="@string/joy_digital_img_name"
        android:layout_marginTop="-50dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joyDigital1"
                android:textSize="15dp"
                android:lineSpacingExtra="8dp"
                android:textColor="#000000"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joyDigital2"
                android:textSize="15dp"
                android:lineSpacingExtra="8dp"
                android:textColor="#000000"
                android:justificationMode="inter_word"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>