<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/awyamelig_walpaper">
    <Button
        android:id="@+id/awmelig_deatils_buttonId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="@string/bangladesh_awyamelig"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="@string/awyamelig_history"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:visibility="gone"/>
    <Button
        android:id="@+id/awmelig_achievement_buttonId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="@string/awyamelig_achivement"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>


</LinearLayout>