<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/chatorlig">
    <Button
        android:id="@+id/bangladesh_chatrolig_detail_btnId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="@string/bangladesh_chatrolig"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/bangladesh_chatrolig_itihas_btnId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="@string/chatrolig_history"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/bangladesh_chatrolig_picture_btnId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:text="@string/chatrolig_photo"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>


</LinearLayout>